# keneric

./: CMakeLists.txt  README.md  keneric.cpp  keneric.h  keneric.json
scripts/: kenericProcess
